--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <link href="./stylesheets/style.css" rel="stylesheet" type="text/css">
 
 
-<div id="header"><%= image_tag('logo.png') %>
+<div id="header"><img src('/images/logo.png') />
   <form action="/search" name="search" method="">
     <a href="#>HOME</a> | <a href="http://dr-sauer.com/site">SITE INDEX</a> | <a href="#">LOG IN</a> |
     <label for="keyword">SEARCH
@@ -15,7 +15,7 @@
 	<ul>
 			<li class=""><label for="keyword"><a href="http://dr-sauer.com"> <span>HOME</span></a></label></li>
 			 <li class=""><label for="keyword"><a href="/projects"><span>PROJECTS</span></a></label></li>
-			 <li class=""><label for="keyword"><a href="/medias"><span>MEDIA</span></a></label></li>
+			 <li class=""><label for="keyword"><a href="/media"><span>MEDIA</span></a></label></li>
 			 <li class=""><label for="keyword"><a href="#"><span>RISK</span></a></label></li>
 			 
 	</ul>
