Image sorting, Search + Pagination

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <link href="./stylesheets/style.css" rel="stylesheet" type="text/css">
 
 
-<div id="header"><img src('/images/logo.png') />
+<div id="header"><img src('./images/logo.png') />
   <form action="/search" name="search" method="">
     <a href="#>HOME</a> | <a href="http://dr-sauer.com/site">SITE INDEX</a> | <a href="#">LOG IN</a> |
     <label for="keyword">SEARCH
@@ -20,6 +20,14 @@
 			 
 	</ul>
 </div>
+
+
+
+
+
+
+
+
 
 
 
